# rz

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  premake5.lua  rt.make  test.txt
example/: 1.md
src/: cli.rs  main.cpp  main.rs
src/license/: apache2.cpp  license.hpp  mit.cpp  mod.rs  util.cpp
